--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         main { padding: 2rem; }
         footer { background: #333; color: #fff; text-align: center; padding: 1rem; position: fixed; width: 100%; bottom: 0; }
     </style>
+    <script>
+        // Store a number in localStorage
+        localStorage.setItem('myNumber', 42);
+    </script>
 </head>
 <body>
     <header>
