New pages for project and submission, navigation links, external CSS file

--- a/Submit.html
+++ b/Submit.html
@@ -28,7 +28,8 @@
     </nav>
     <main>
         <h2>Welcome!</h2>
-        <p>This is a basic website template. Customize it as you like.</p>
+        <p>This is a Submit page.</p>
+        <a href= "https://docs.google.com/forms/d/e/1FAIpQLSfBwn_6lB2YcrGtiugpgyQY1sgBN6CML02daYZowO4RzitZ8A/viewform?usp=header">Submit your own project</a>
     </main>
     <footer>
         &copy; 2024 My Website
