--- a/Project.html
+++ b/Project.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Z-0101 is a website for showcasing projects.">
+    <meta name="keywords" content="Projet Display">
+    <meta name="author" content="Nouhou Issoufou">
+
     <title>Website Template</title>
     <link rel="stylesheet" href="styles.css">
     <script>
@@ -28,7 +32,7 @@
     </nav>
     <main>
         <h2>Welcome!</h2>
-        <p>This is a basic website template. Customize it as you like.</p>
+        <p>This is a project page.</p>
     </main>
     <footer>
         &copy; 2024 My Website
