Adding reward button and Reward.html page

--- a/Project.html
+++ b/Project.html
@@ -29,6 +29,7 @@
         <a href="index.html">Home</a>
         <a href="Project.html">Project</a>
         <a href="Submit.html">Submit your own project</a>
+        <a href="reward.html">Reward Page</a>
     </nav>
     <main>
         <h2>Welcome!</h2>
