--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <a href="index.html">Home</a>
         <a href="Project.html">Project</a>
         <a href="Submit.html">Submit your own project</a>
+        <a href="Reward.html">Reward Page</a>
     </nav>
     <main>
         <h2>Welcome!</h2>
