--- a/Project.html
+++ b/Project.html
@@ -6,7 +6,6 @@
     <meta name="description" content="Z-0101 is a website for showcasing projects.">
     <meta name="keywords" content="Projet Display">
     <meta name="author" content="Nouhou Issoufou">
-
     <title>Website Template</title>
     <link rel="stylesheet" href="styles.css">
     <script>
@@ -17,6 +16,22 @@
             const main = document.querySelector('header');
             const numberPara = document.createElement('h2');
             numberPara.textContent = 'Token: ' + myNumber;
+            main.appendChild(numberPara);
+        });
+        document.addEventListener('DOMContentLoaded', function() {
+            const main = document.querySelector('main');
+            const url = "https://docs.google.com/spreadsheets/d/1e0nGG8TdJsgquZhWgCvKVqXyCoXomm2nYTvJdHT11SQ/gviz/tq?tqx=out:csv";
+
+            fetch(url)
+                .then(response => response.text())
+                  .then(csv => {
+                    console.log(csv); // Données brutes CSV
+          })
+            .catch(error => console.error('Erreur:', error));
+
+            // Loop intiatiating
+            const numberPara = document.createElement('div');
+            numberPara.textContent = 'ProjectName - description - Creator - Link';
             main.appendChild(numberPara);
         });
     </script>
