--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Template</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="canonical">
+    <link rel="canonical" href="https://nouhou12.github.io/Z-0101/index.html" />
     <script>
         // Retrieve the number from localStorage
         const myNumber = localStorage.getItem('myNumber');
