--- a/Reward.html
+++ b/Reward.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Z-0101 is a website for showcasing projects.">
     <meta name="keywords" content="Projet Display">
     <meta name="author" content="Nouhou Issoufou">
-
+    <link rel="canonical" href="https://nouhou12.github.io/Z-0101/Reward.html" />
     <title>Website Template</title>
     <link rel="stylesheet" href="styles.css">
     <script>
