--- a/Submit.html
+++ b/Submit.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    <link rel="canonical" href="https://nouhou12.github.io/Z-0101/Submit.html" />
     <title>Website Template</title>
     <link rel="stylesheet" href="styles.css">
     <script>
