--- a/Contact.html
+++ b/Contact.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Z-0101 is a website for showcasing projects.">
+    <meta name="keywords" content="Projet Display">
+    <meta name="author" content="Nouhou Issoufou">
+    <link rel="canonical" href="https://nouhou12.github.io/Z-0101/Project.html" />
     <title>Website Template</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="canonical" href="https://nouhou12.github.io/Z-0101/index.html" />
     <script>
         // Retrieve the number from localStorage
         const myNumber = localStorage.getItem('myNumber');
@@ -31,8 +34,8 @@
         <a href="Contact.html">Contact</a>
     </nav>
     <main>
-        <h2>Welcome!</h2>
-        <p>This is a basic website template. Customize it as you like.</p>
+        <h2>Contact us</h2>
+        <p>This is a project page.</p>
     </main>
     <footer>
         &copy; 2024 My Website
