--- a/Submit.html
+++ b/Submit.html
@@ -26,9 +26,11 @@
     </header>
     <nav>
         <a href="index.html">Home</a>
+        <a href="FeaturedProject.html">Featured Project</a>
         <a href="Project.html">Project</a>
         <a href="Submit.html">Submit your own project</a>
-        <a href="Reward.html">Reward Page</a>
+        <a href="reward.html">Reward Page</a>
+        <a href="Contact.html">Contact</a>
     </nav>
     <main>
         <h2>Welcome!</h2>
