--- a/Reward.html
+++ b/Reward.html
@@ -62,7 +62,7 @@
         <a href="FeaturedProject.html">Featured Project</a>
         <a href="Project.html">Project</a>
         <a href="Submit.html">Submit your own project</a>
-        <a href="reward.html">Reward Page</a>
+        <a href="Reward.html">Reward Page</a>
         <a href="Contact.html">Contact</a>
     </nav>
     <main>
