here's your commit message template:

--- a/Project.html
+++ b/Project.html
@@ -25,10 +25,7 @@
       const main = document.querySelector('main');
       const sheetId = "1m1At1nq4GiobfB5D-l0ilSxWHw4f2KjPmzX35uFpJvU";
       
-      const url = `https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:csv`;
-      const proxy = "https://api.allorigins.win/raw?url="; // ✅ Proxy pour contourner CORS
-
-      fetch(proxy + encodeURIComponent(url))
+      fetch(url)
         .then(response => {
           if (!response.ok) throw new Error("Erreur réseau : " + response.status);
           return response.text();
