--- a/Project.html
+++ b/Project.html
@@ -23,7 +23,7 @@
     <script>
     const main = document.querySelector('main');
     const sheetId = "1m1At1nq4GiobfB5D-l0ilSxWHw4f2KjPmzX35uFpJvU";
-    const url = `https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:csv`;
+    const url = `https://docs.google.com/spreadsheets/d/1m1At1nq4GiobfB5D-l0ilSxWHw4f2KjPmzX35uFpJvU/gviz/tq?tqx=out:csv`;
 
     fetch(url)
         .then(response => {
