--- a/Project.html
+++ b/Project.html
@@ -40,6 +40,7 @@
                     const colonnes = ligne.split(',');
 
                     const nettoyé = colonnes.map(val => val.replace(/^"|"$/g, '').trim());
+                    colonnes = nettoyé;
 
                     const block = document.createElement('div');
                     block.classList.add('data-block');
