--- a/Project.html
+++ b/Project.html
@@ -37,7 +37,7 @@
 
                 lignes.forEach((ligne, index) => {
                     if (index === 0) return; // Ignorer l'en-tête éventuel
-                    const colonnes = ligne.split(',');
+                    let colonnes = ligne.split(',');
 
                     const nettoyé = colonnes.map(val => val.replace(/^"|"$/g, '').trim());
                     colonnes = nettoyé;
